cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_374.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/sm2/sm2_sign.c:447: error: DEAD_STORE
  The value written to &derlen (type int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/sm2/sm2_sign.c:447:5: Write of unused value
445.       const unsigned char *p = sig;
446.       unsigned char *der = NULL;
447.       int derlen = -1;
           ^
448.       int ret = -1;
449.   
